--- a/index.html
+++ b/index.html
@@ -5,20 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GraficarteMdz</title>
-    <link type="image/x-icon" href="css/paginaicono.ico.png" rel="icon">
-    <link rel="stylesheet" href="/TPO/css/styles.css">
+    <link type="image/x-icon" href="/css/paginaicono.ico.png" rel="icon">
+    <link rel="stylesheet" href="/css/styles.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 </head>
-<!--Emi como estas?? che si estas leyendo esto y mi pagina sige sin un background significa que no solucione el tema del repositorio
-no tengo idea por que no te toma las imagenes ni las fuentes.. le di una banda de vuetas y ni idea... pd la pagina con los 3 cortes de responsiv es la iden.corp.. no hice una segunda pag por que literal era hacer
-coppy paste de la otra.. y al final .era lo que no querian asique nada.. igual esta pag la voy a ir actualizando asique en esas cuando la corrijas te encuentres con bugs ya arreglados-->
+<!--<div class="fondos"><img src="/TPO/css/FONDO1.jpg" alt=""></div>-->
 <body>
-
-
         <div class="Grancontenedor">
             <header>
-                <img id="logo"src="/TPO/css/logo-eps.png" alt="/TPO/css/logo-eps.png">
+                <img id="logo"src="/css/logo-eps.png" alt="/css/logo-eps.png">
             </header>
             <div id="gris">
                 <!--<section id="grid-container">-->
@@ -30,32 +26,32 @@ coppy paste de la otra.. y al final .era lo que no querian asique nada.. igual e
                     </section>
                     <section class="grid-iden">
                         <div id="ver">
-                           <a href="/tpo/iden.corp.html"> Identidad Corporativa<img src="/TPO/css/N1.png" alt=""></a>
+                           <a href="/iden.corp.html"> Identidad Corporativa<img src="/css/N1.png" alt=""></a>
                         </div>
                     </section>
                      <section class="grid-sub">
                          <div id="ver">
-                            <a href="https://google.com"> Sublimados<img src="/TPO/css/N2.png" alt=""></a>
+                            <a href="https://google.com"> Sublimados<img src="/css/N2.png" alt=""></a>
                         </div>
                     </section>
                      <section class="grid-car">
                          <div id="ver">
-                            <a href="https://google.com"> Cartelería<img src="/TPO/css/N3.png" alt=""></a>
+                            <a href="https://google.com"> Cartelería<img src="/css/N3.png" alt=""></a>
                             </div>
                         </section>
                      <section class="grid-grab">
                          <div id="ver">
-                            <a href="https://google.com"> Grabados<img src="/TPO/css/N4.png" alt=""></a>
+                            <a href="https://google.com"> Grabados<img src="/css/N4.png" alt=""></a>
                         </div>
                         </section>
                      <section class="grid-tarP">
                          <div id="ver">
-                            <a href="https://google.com"> Tarjetas Personales<img src="/TPO/css/N5.png" alt=""></a>
+                            <a href="https://google.com"> Tarjetas Personales<img src="/css/N5.png" alt=""></a>
                         </div>
                     </section>
                      <section class="grid-graf">
                          <div id="ver">
-                            <a href="https://google.com"> Gráfica Vehicular <img src="/TPO/css/N6.png" alt=""></a>
+                            <a href="https://google.com"> Gráfica Vehicular <img src="/css/N6.png" alt=""></a>
                         </div>
                     </section>
                <!-- </section> -->
@@ -63,42 +59,42 @@ coppy paste de la otra.. y al final .era lo que no querian asique nada.. igual e
                 <sec class="espacio"></sec>
                 <div class="fotos">
                     <div class="bg">
-                        <img src="/TPO/css/foto1.jpg" alt="">
+                        <img src="/css/foto1.jpg" alt="">
                         <div class="overlay" href="iden.corp.html">
                             <h2>Identidad Corporativa</h2>
                             <p>Diseñamos la marca de tus sueños!!</p>
                         </div>
                     </div>
                     <div class="bg">
-                        <img src="/tpo/css/foto2.jpg" alt="">
+                        <img src="/css/foto2.jpg" alt="">
                         <div class="overlay" href="https;//google.com">
                             <h2>Sublimados</h2>
                             <p>¿Seguro que no se puede sublimar?</p>
                         </div>
                     </div>
                     <div class="bg">
-                        <img src="/tpo/css/foto3.jpg" alt="">
+                        <img src="/css/foto3.jpg" alt="">
                         <div class="overlay" href="https;//google.com">
                             <h2>Cartelería</h2>
                             <p>!¿A que altura vá?!</p>
                         </div>
                     </div>
                     <div class="bg">
-                        <img src="/TPO/css/foto4.jpg" alt="">
+                        <img src="/css/foto4.jpg" alt="">
                         <div class="overlay" href="https;//google.com">
                             <h2>Grabados</h2>
                             <p>¿Donde? ¿Qué? y ¿Como quieras?</p>
                         </div>
                     </div>
                     <div class="bg">
-                        <img src="/TPO/css/foto5.jpg" alt="">
+                        <img src="/css/foto5.jpg" alt="">
                         <div class="overlay" href="https;//google.com">
                             <h2>Tarjetas Personales</h2>
                             <p>¡Deja tu huella!</p>
                         </div>
                     </div>
                     <div class="bg">
-                        <img src="/TPO/css/foto6.jpg" alt="">
+                        <img src="/css/foto6.jpg" alt="">
                         <div class="overlay" href="https;//google.com">
                             <h2>Gráfica Vehicular</h2>
                             <p>¡Tu marca, a donde vayas!</p>
@@ -166,9 +162,9 @@ coppy paste de la otra.. y al final .era lo que no querian asique nada.. igual e
             </iframe><!-- el iframe de maps por que ni a gancho metia iconos de font y todo es-->
         </div>
         
-        <a id="inst" href="https://www.instagram.com/graficartemdz/?hl=es-la"><img src="/TPO/css/insta.png" alt="GraficarteMdz en instagram"></a>
-        <a id="fac" href="https://www.google.com"><img src="/TPO/css/whats.png" alt="GraficarteMdz en Whatsapp"></a> <!-- no busque para meter el numero por que lo pasaron a qr.. y eran las 3 fue dps lo cambio-->
-        <a id="what" href="https://www.facebook.com/people/GraficArte-Mdz/100009917714571/"><img src="/TPO/css/fac.png" alt=""></a>
+        <a id="inst" href="https://www.instagram.com/graficartemdz/?hl=es-la"><img src="/css/insta.png" alt="GraficarteMdz en instagram"></a>
+        <a id="fac" href="https://www.google.com"><img src="/css/whats.png" alt="GraficarteMdz en Whatsapp"></a> <!-- no busque para meter el numero por que lo pasaron a qr.. y eran las 3 fue dps lo cambio-->
+        <a id="what" href="https://www.facebook.com/people/GraficArte-Mdz/100009917714571/"><img src="/css/fac.png" alt=""></a>
         </footer>   
 </body>
 </html>
