--- a/index.html
+++ b/index.html
@@ -60,43 +60,42 @@
                 <div class="fotos">
                     <div class="bg">
                         <img src="/css/foto1.jpg" alt="">
-                        <div class="overlay" href="iden.corp.html">
-                            <h2>Identidad Corporativa</h2>
+                        <div class="overlay">
+                            <a href="iden.corp.html">Identidad Corporativa</a>
                             <p>Diseñamos la marca de tus sueños!!</p>
                         </div>
                     </div>
                     <div class="bg">
                         <img src="/css/foto2.jpg" alt="">
                         <div class="overlay" href="https;//google.com">
-                            <h2>Sublimados</h2>
+                            <a href="iden.corp.html">Sublimados</a>
                             <p>¿Seguro que no se puede sublimar?</p>
                         </div>
                     </div>
                     <div class="bg">
                         <img src="/css/foto3.jpg" alt="">
                         <div class="overlay" href="https;//google.com">
-                            <h2>Cartelería</h2>
+                            <a href="iden.corp.html">Cartelería</a>
                             <p>!¿A que altura vá?!</p>
                         </div>
                     </div>
                     <div class="bg">
                         <img src="/css/foto4.jpg" alt="">
                         <div class="overlay" href="https;//google.com">
-                            <h2>Grabados</h2>
-                            <p>¿Donde? ¿Qué? y ¿Como quieras?</p>
+                            <a href="iden.corp.html">Grabados</a>                           <p>¿Donde? ¿Qué? y ¿Como quieras?</p>
                         </div>
                     </div>
                     <div class="bg">
                         <img src="/css/foto5.jpg" alt="">
                         <div class="overlay" href="https;//google.com">
-                            <h2>Tarjetas Personales</h2>
+                            <a href="iden.corp.html">Tarjetas personales</a>
                             <p>¡Deja tu huella!</p>
                         </div>
                     </div>
                     <div class="bg">
                         <img src="/css/foto6.jpg" alt="">
                         <div class="overlay" href="https;//google.com">
-                            <h2>Gráfica Vehicular</h2>
+                            <a href="iden.corp.html">Grafica Vehicular</a>
                             <p>¡Tu marca, a donde vayas!</p>
                         </div>
                     </div> 
